# Cheiron-backend

./: .coverage  .env.example  .gitignore  README.kr.md  README.md  check_models.py  exampleRuns.md  pyproject.toml
app/: config.py  main.py
app/clients/: clinicaltrials.py
app/errors/: error_code.py  error_registry.py  exceptions.py  handlers.py  models.py
app/models/: request.py  response.py
app/pipeline/: api_builder.py  data_fetcher.py  dim_inference.py  entity_filters.py  normalizers.py  phase_strategy.py  query_parser.py  response_builder.py  transformer.py  viz_selector.py
app/pipeline/transforms/: comparison.py  network.py  tabular.py
examples/: example_runs.json
tests/: conftest.py  test_api_builder.py  test_comparison_query.py  test_distribution_phase.py  test_errors.py  test_integration.py  test_outlier_analysis.py  test_phase_strategy.py  test_query_parser.py  test_response_builder.py  test_transformer.py  test_transformer_extended.py  test_transformer_network.py  test_trend_temporal_filter.py  test_viz_selector.py
