[project]
name = "ct-viz-agent"
version = "0.1.0"
description = "ClinicalTrials.gov Query-to-Visualization Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.30",
    "httpx>=0.27",
    "pandas>=2.2",
    "networkx>=3.3",
    "cachetools>=5.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
